web/platform/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: igiari.local
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080
